test/core/errors/expressions_error/zs/string_integer_concatenation_error.zs
package string_integer_concatenation_error;

struct StringIntegerConcatenationError
{
    int32  data;

    function string wrong()
    {
        return "Some string " + data;
    }
};
